--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.5.1"
 seaborn = "^0.11.2"
 scikit-learn = "^1.0.2"
 sweetviz = "^2.1.3"
+simpful = "^2.6.2"
 
 [tool.poetry.dev-dependencies]
 
